k8s/service/service-php-hello-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-hello-loadbalancer
  labels:
    role: web
spec:
  selector:
    role: web
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
