k8s/service/service-php-hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-hello
  labels:
    role: web
spec:
  selector:
    role: web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort
